# IntelliSearch

./: .gitignore  CLAUDE.md  README.md  README4MCP.md  README_ZH.md  REFACTOR.md  api.py  cli.py  code_api.py  pyproject.toml  run.sh  setup.sh
agents/: __init__.py  mcp_agent.py  mcp_agent_async.py
backend/: README.md  __init__.py  cli.py  cli_backend.py  code_backend.py  eval_model.py  main_fastapi.py  tool_hash.py  web_backend.py
backends/: cli_backend.py
config/: benchmark_config.yaml  config.example.yaml  config.yaml  config_loader.py
core/: __init__.py  base.py  error_center.py  events.py  exceptions.py  factory.py  logger.py  openai_schema.py  schema.py
crawling/: cleaning.py
docs/: COMPREHENSIVE_ARCHITECTURE_ROADMAP.md  DEV_ARCHITECTURE.md  DEV_SETUP.md  ERROR_CENTER_DESIGN.md  ERROR_CODE_USAGE_GUIDE.md  ERROR_HANDLING_REFACTORING_PLAN.md  RAG_SERVER_DOCS.md  README.md  UI_ENGINE_IMPLEMENTATION_SUMMARY.md  UPDATE_20250310.md  index.html  introduction.html
frontend/: app.py
mcp_module/: connector.py  server_manager.py  tool_cache.py
memory/: sequential.py
prompts/: base_system_prompt.md  cleaning_sys.md  cleaning_user.md  sys_zh.md
scripts/: start_all.sh  start_backend.py  start_frontend.py  stop_services.sh
services/: __init__.py  base_service.py  cli_service.py  code_service.py  web_service.py
spec/: task_1.md  task_2.md
test/: README.md  conftest.py  pytest.ini  quick_test.py  run_standard_test.sh  run_tests.sh  test_backend_api.py  test_exceptions_enhanced.py  test_openai_sdk.py  test_sai_memos.py
tools/: connector.py  mcp_base.py  (+3 more)
(+147 files in other folders)
